# wayland

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/jvmMain/kotlin/pkg/virdin/wayland/: App.kt  BinaryManager.kt  BridgeSocket.kt  BuildConfig.kt  ComposeWaylandBridge.kt  ComposeWaylandSurface.kt  ContentPosition.kt  ContextMenu.kt  LayerShellProtocol.kt  LibC.kt  LibNames.kt  NativeWaylandCalls.kt  OffScreenRenderer.kt  Platform.kt  Protocol.kt  RegistryListener.kt  SceneContextAccessor.kt  SharedFrame.kt  StrutShim.kt  VirdinSceneFactory.kt  WaylandBridge.kt  WaylandClientLib.kt  WaylandCompose.kt  WaylandConfig.kt  WaylandInterface.kt  WaylandRegistryListener.kt  WaylandWindowManager.kt  main.kt
composeApp/src/jvmMain/resources/native/: wayland_helper.c
composeApp/src/jvmMain/resources/native/linux-x86_64/: wayland-helper
composeApp/src/jvmMain/virdin-wayland-helper/: build_native.sh
composeApp/src/jvmMain/virdin-wayland-helper/native/: CMakeLists.txt  wayland_helper.c
composeApp/src/jvmMain/virdin-wayland-helper/native/protocol/: wlr-layer-shell-unstable-v1.xml  xdg-shell-protocol.c
gradle/: libs.versions.toml
